--- a/readme.ipynb
+++ b/readme.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "Write in the terminal : \n",
     "\n",
-    "##### pip install -r requirements.txt\n",
+    "#### pip install -r requirements.txt\n",
     "\n",
     "This will last a few seconds or minutes.\n",
     "\n",
@@ -43,7 +43,7 @@
     "To launch the application, you must open a terminal and verify you are in the folder DataCamp.\n",
     "When you are in, write in the terminal : \n",
     "\n",
-    "##### streamlit run main.py\n",
+    "#### streamlit run main.py\n",
     "\n",
     "To use it in the cloud go in : https://zzappy24-datacamp-main-qth8fg.streamlitapp.com/dashboard"
    ]
