--- a/readme.ipynb
+++ b/readme.ipynb
@@ -45,7 +45,9 @@
     "\n",
     "#### streamlit run main.py\n",
     "\n",
-    "To use it in the cloud go in : https://zzappy24-datacamp-main-qth8fg.streamlitapp.com/dashboard"
+    "To use it in the cloud go in : https://zzappy24-datacamp-main-qth8fg.streamlitapp.com/dashboard\n",
+    "\n",
+    "github : https://github.com/Zzappy24/DataCamp"
    ]
   },
   {
@@ -63,10 +65,21 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.10.7 ('zappy-4trETFn8')",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.10.7"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "fb56326100b60830e42d6520bc8926981817da01ae60f62378fc7214fc55e45c"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
